lab1/Test/L1-A-13-93.output
Error Type B at Line 1
Error Type A at Line 12
Error Type A at Line 16
Error Type A at Line 20
Error Type A at Line 24
Error Type B at Line 27
Error Type B at Line 36
Error Type B at Line 39
Error Type A at Line 39
Error Type B at Line 39
